@@ -1,6 +1,7 @@
 1.0.0.8:
   -preparation for 2.0 grottos and hps
   -added more hps for 2.0 prep
+  -changed hookshot/longshot images to be better distinguishable
 1.0.0.7:
   -added labels below the medallions/stones
   -fixed two Forest Temple locations
